FBINTF Change Log  version          (1.3-2 Build 12776) Mon, 23 Aug 2021 11:09:33 +0100

1. TFBClientAPI.GetProcAddr. Add check for nil reference.

FBINTF Change Log  version          (1.3-1 Build 12776) Mon, 23 Aug 2021 11:09:33 +0100

1. Integer decodes in information blocks (e.g. IDBInfoItem) widened from 32 bit to 64-bit integers.

2. Support for inline blob encoding. Blob values pass using the "SetAsString" method
   will now be encoded inline (i.e. as part of the parameter buffer) if they are
   shorter than a pre-set limit. Longer values continue to be saved as blobs as a
   separate server interaction. This is intended as a performance optimisation.

   The pre-set limit defaults to 8192 bytes and can be inspected/modified using the new
   IAttachment interface functions:

    function GetInlineBlobLimit: integer;
    procedure SetInlineBlobLimit(limit: integer);

3. Support for Firebird 4 IBatch interface added. This is largely transparent to the API
   user as the functionality is embedded in the implementation of the IStatement
   interface. Three new functions are defined:

    procedure AddToBatch;
    function ExecuteBatch(aTransaction: ITransaction=nil): IBatchCompletion;
    procedure CancelBatch;
    function GetBatchCompletion: IBatchCompletion;
    function GetBatchRowLimit: integer;
    procedure SetBatchRowLimit(aLimit: integer);

   Also

    function IsInBatchMode: boolean;        {true after call to execute(eaDefer)}
    function HasBatchMode: boolean;         {true if and only if IBatch Supported}

   For more information see the User Guide.

4. Default error message contents. Now aligned with User Guide section 10.2 i.e. error messages
   provided with the EIBInterBaseError now include all three parts.

5. Firebird.pas and include files updated to Firebird 4.0.0

6. New IStatement method: function GetSQLStatementTypeName: AnsiString;
   Returns SQL Statement type as a text string;
