@@ -151,11 +151,10 @@
       <Unit19>
         <Filename Value="testApp/TestApplication.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="183"/>
         <CursorPos X="15" Y="199"/>
         <UsageCount Value="112"/>
-        <Loaded Value="True"/>
       </Unit19>
       <Unit20>
         <Filename Value="FBTestApp.pas"/>
@@ -176,20 +175,18 @@
       <Unit22>
         <Filename Value="Test19.pas"/>
         <IsPartOfProject Value="True"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="448"/>
         <CursorPos X="3" Y="471"/>
         <UsageCount Value="84"/>
-        <Loaded Value="True"/>
       </Unit22>
       <Unit23>
         <Filename Value="Test20.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="1"/>
-        <TopLine Value="96"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="117"/>
         <CursorPos Y="147"/>
         <UsageCount Value="42"/>
-        <Loaded Value="True"/>
       </Unit23>
       <Unit24>
         <Filename Value="TestManager.pas"/>
@@ -200,11 +197,10 @@
       </Unit24>
       <Unit25>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="378"/>
         <CursorPos Y="403"/>
         <UsageCount Value="40"/>
-        <Loaded Value="True"/>
       </Unit25>
       <Unit26>
         <Filename Value="../IBUtils.pas"/>
@@ -215,31 +211,28 @@
       </Unit26>
       <Unit27>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="9"/>
-        <TopLine Value="980"/>
-        <CursorPos X="20" Y="1006"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="799"/>
+        <CursorPos X="3" Y="805"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="799"/>
-          <CursorPos X="3" Y="805"/>
+          <TopLine Value="980"/>
+          <CursorPos X="20" Y="1006"/>
         </ExtraEditor1>
         <UsageCount Value="44"/>
-        <Loaded Value="True"/>
       </Unit27>
       <Unit28>
         <Filename Value="../client/FBMessages.pas"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="172"/>
         <CursorPos X="17" Y="189"/>
         <UsageCount Value="29"/>
-        <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="../IB.pas"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="773"/>
-        <CursorPos X="50" Y="798"/>
+        <TopLine Value="782"/>
+        <CursorPos X="47" Y="782"/>
         <UsageCount Value="57"/>
         <Loaded Value="True"/>
       </Unit29>
@@ -258,11 +251,10 @@
       </Unit31>
       <Unit32>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="411"/>
         <CursorPos X="45" Y="424"/>
         <UsageCount Value="38"/>
-        <Loaded Value="True"/>
       </Unit32>
       <Unit33>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
@@ -287,9 +279,9 @@
       </Unit35>
       <Unit36>
         <Filename Value="../client/FBStatement.pas"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="37"/>
-        <CursorPos X="31" Y="48"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="351"/>
+        <CursorPos X="35" Y="359"/>
         <UsageCount Value="36"/>
         <Loaded Value="True"/>
       </Unit36>
@@ -441,11 +433,10 @@
       </Unit57>
       <Unit58>
         <Filename Value="../client/3.0/FB30Array.pas"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="297"/>
         <CursorPos X="1024" Y="327"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
       </Unit58>
       <Unit59>
         <Filename Value="../client/2.5/FB25Array.pas"/>
@@ -456,24 +447,25 @@
       </Unit59>
       <Unit60>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="4"/>
-        <TopLine Value="1716"/>
-        <CursorPos X="35" Y="1738"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="1488"/>
+        <CursorPos X="40" Y="1514"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="298"/>
-          <CursorPos Y="311"/>
+          <TopLine Value="1716"/>
+          <CursorPos X="35" Y="1738"/>
         </ExtraEditor1>
         <UsageCount Value="45"/>
         <Loaded Value="True"/>
       </Unit60>
       <Unit61>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1012"/>
-        <CursorPos Y="1028"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="1112"/>
+        <CursorPos X="30" Y="1137"/>
         <UsageCount Value="12"/>
+        <Loaded Value="True"/>
       </Unit61>
       <Unit62>
         <Filename Value="../client/FBParamBlock.pas"/>
@@ -526,20 +518,19 @@
       </Unit68>
       <Unit69>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="10"/>
-        <CursorPos Y="24"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="4"/>
+        <CursorPos X="34" Y="11"/>
         <UsageCount Value="13"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit69>
       <Unit70>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1510"/>
         <CursorPos X="9" Y="1505"/>
         <UsageCount Value="40"/>
-        <Loaded Value="True"/>
       </Unit70>
       <Unit71>
         <Filename Value="../../ibx/dclibx.pas"/>
@@ -952,133 +943,116 @@
         <UsageCount Value="10"/>
       </Unit128>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="26" HistoryIndex="25">
       <Position1>
-        <Filename Value="../client/FBStatement.pas"/>
-        <Caret Line="178" Column="41" TopLine="159"/>
-      </Position1>
-      <Position2>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1728" Column="21" TopLine="1705"/>
-      </Position2>
-      <Position3>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="97" Column="24" TopLine="87"/>
-      </Position3>
-      <Position4>
         <Filename Value="../IB.pas"/>
         <Caret Line="793" Column="14" TopLine="778"/>
+      </Position1>
+      <Position2>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="793" Column="14" TopLine="787"/>
+      </Position2>
+      <Position3>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="1361" Column="40" TopLine="1350"/>
+      </Position3>
+      <Position4>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="94" Column="21" TopLine="83"/>
       </Position4>
       <Position5>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1239" Column="8" TopLine="1224"/>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="186" Column="33" TopLine="166"/>
       </Position5>
       <Position6>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="117" Column="41" TopLine="103"/>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="94" Column="17" TopLine="80"/>
       </Position6>
       <Position7>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="129" Column="16" TopLine="115"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1037" Column="61" TopLine="1015"/>
       </Position7>
       <Position8>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1233" Column="40" TopLine="1224"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="262" Column="14" TopLine="254"/>
       </Position8>
       <Position9>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="308" Column="20" TopLine="289"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1082" Column="31" TopLine="1057"/>
       </Position9>
       <Position10>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="97" Column="20" TopLine="87"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1079" Column="93" TopLine="1057"/>
       </Position10>
       <Position11>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1732" Column="16" TopLine="1713"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
       </Position11>
       <Position12>
-        <Filename Value="../client/3.0/firebird/Firebird.pas"/>
-        <Caret Line="1270" Column="2" TopLine="1263"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="182" Column="22" TopLine="156"/>
       </Position12>
       <Position13>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="309" Column="20" TopLine="287"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="800" Column="30" TopLine="774"/>
       </Position13>
       <Position14>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1699" Column="3" TopLine="1692"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1019" Column="33" TopLine="994"/>
       </Position14>
       <Position15>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="309" Column="19" TopLine="288"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1020" Column="33" TopLine="995"/>
       </Position15>
       <Position16>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1695" TopLine="1689"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1037" Column="61" TopLine="1011"/>
       </Position16>
       <Position17>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="310" Column="23" TopLine="291"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1082" Column="31" TopLine="1075"/>
       </Position17>
       <Position18>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1740" Column="41" TopLine="1700"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="1100" Column="61" TopLine="1074"/>
       </Position18>
       <Position19>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1722" Column="81" TopLine="1707"/>
+        <Caret Line="310" Column="54" TopLine="298"/>
       </Position19>
       <Position20>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="131" Column="20" TopLine="113"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1209" Column="30" TopLine="1183"/>
       </Position20>
       <Position21>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="126" Column="15" TopLine="111"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1352" Column="33" TopLine="1327"/>
       </Position21>
       <Position22>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="793" Column="14" TopLine="787"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1353" Column="33" TopLine="1328"/>
       </Position22>
       <Position23>
-        <Filename Value="../client/FBMessages.pas"/>
-        <Caret Line="176" Column="49" TopLine="166"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1393" Column="61" TopLine="1368"/>
       </Position23>
       <Position24>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="126" Column="30" TopLine="114"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1421" Column="31" TopLine="1396"/>
       </Position24>
       <Position25>
-        <Filename Value="../client/FBMessages.pas"/>
-        <Caret Line="172" TopLine="157"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1439" Column="61" TopLine="1413"/>
       </Position25>
       <Position26>
-        <Filename Value="../client/FBMessages.pas"/>
-        <Caret Line="192" Column="13" TopLine="172"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../client/FBMessages.pas"/>
-        <Caret Line="75" Column="24" TopLine="59"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../client/FBMessages.pas"/>
-        <Caret Line="175" Column="73" TopLine="152"/>
-      </Position28>
-      <Position29>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1743" TopLine="1716"/>
-      </Position29>
-      <Position30>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="1361" Column="40" TopLine="1350"/>
-      </Position30>
+        <Caret Line="1476" Column="30" TopLine="1451"/>
+      </Position26>
     </JumpHistory>
     <RunParams>
       <FormatVersion Value="2"/>
       <Modes ActiveMode="default"/>
     </RunParams>
-    <HistoryLists Count="3">
+    <HistoryLists Count="2">
       <List0 Name="LaunchingApplication" Type="File" Count="1">
         <Item1 Value="/usr/bin/xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </List0>
